feat(post): 添加获取编辑用的文章信息 refactor(post): 调整createCommand中的分类数据类型